--- a/model-building.html
+++ b/model-building.html
@@ -237,8 +237,8 @@ div.csl-indent {
 </ul></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#limitations"><i class="fa fa-check"></i>Limitations</a></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#literature-recommendations"><i class="fa fa-check"></i>Literature Recommendations</a></li>
+<li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#important-disclaimer"><i class="fa fa-check"></i>Important Disclaimer</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="important-disclaimer.html"><a href="important-disclaimer.html"><i class="fa fa-check"></i>Important Disclaimer</a></li>
 <li class="chapter" data-level="" data-path="homework-for-week-3.html"><a href="homework-for-week-3.html"><i class="fa fa-check"></i>Homework for Week 3</a></li>
 <li class="chapter" data-level="" data-path="glossary-1.html"><a href="glossary-1.html"><i class="fa fa-check"></i>Glossary</a></li>
 <li class="chapter" data-level="" data-path="flashcards-1.html"><a href="flashcards-1.html"><i class="fa fa-check"></i>Flashcards</a></li>
@@ -398,8 +398,8 @@ div.csl-indent {
 
     <script>
 
-      function styleCell_xh84sl3u2bwil5ca0dqh(i, j, css_id) {
-          var table = document.getElementById("tinytable_xh84sl3u2bwil5ca0dqh");
+      function styleCell_1d9iaxfxol2id5r2jmgf(i, j, css_id) {
+          var table = document.getElementById("tinytable_1d9iaxfxol2id5r2jmgf");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -409,7 +409,7 @@ div.csl-indent {
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_xh84sl3u2bwil5ca0dqh');
+        var table = document.getElementById('tinytable_1d9iaxfxol2id5r2jmgf');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -417,8 +417,8 @@ div.csl-indent {
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_xh84sl3u2bwil5ca0dqh(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_xh84sl3u2bwil5ca0dqh");
+      function spanCell_1d9iaxfxol2id5r2jmgf(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_1d9iaxfxol2id5r2jmgf");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -448,23 +448,23 @@ div.csl-indent {
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_md32cj0tn2mgijmtalrn',}, 
-          { positions: [ { i: 10, j: 2 }, { i: 10, j: 1 }, { i: 10, j: 3 },  ], css_id: 'tinytable_css_7qu7evz5852nfuk32ogb',}, 
-          { positions: [ { i: 7, j: 3 }, { i: 7, j: 2 }, { i: 7, j: 1 },  ], css_id: 'tinytable_css_wb5z4s69xuo8hopuqsh5',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 4, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 2 }, { i: 3, j: 3 }, { i: 2, j: 2 }, { i: 9, j: 3 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 9, j: 1 }, { i: 8, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 8, j: 3 },  ], css_id: 'tinytable_css_chd3zliacvi6uwlhhfs6',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_oz58fx6sqhg0var00chc',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 3 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_ikdjh2x5veii129u2g9a',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_brjqichik8778kn2hmsu',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_tqz58seall5x9d937y88',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 },  ], css_id: 'tinytable_css_bw6b3f3q0wxb50wppxnn',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_zhrho26du2h5sj3mvjd6',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_f5386emr50qcimqbklt3',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_om6hodygrm6yhlg5hyrn',}, 
+          { positions: [ { i: 10, j: 2 }, { i: 10, j: 1 }, { i: 10, j: 3 },  ], css_id: 'tinytable_css_pq4jwadh4vfre5d4odye',}, 
+          { positions: [ { i: 7, j: 3 }, { i: 7, j: 2 }, { i: 7, j: 1 },  ], css_id: 'tinytable_css_6aunt7l8zt55mij8jxd3',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 4, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 2 }, { i: 3, j: 3 }, { i: 2, j: 2 }, { i: 9, j: 3 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 9, j: 1 }, { i: 8, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 8, j: 3 },  ], css_id: 'tinytable_css_73m18dy58yqit7gxg9wf',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_g7ohrhzoj85bmaubgyo3',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 3 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_pj7d3jcu0lhc7yefkp7d',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_9ii4vfdjii77455q5yzh',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_gvhyxwre5r79hu2a0udc',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 },  ], css_id: 'tinytable_css_w7qey1i0iag3n8936bsl',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_9l0yjbmdvrbsapno2ie1',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_hoau95msp00rd0nlz8ep',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_xh84sl3u2bwil5ca0dqh(cell.i, cell.j, group.css_id);
+                  styleCell_1d9iaxfxol2id5r2jmgf(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -472,20 +472,20 @@ div.csl-indent {
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_md32cj0tn2mgijmtalrn, .table th.tinytable_css_md32cj0tn2mgijmtalrn { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_7qu7evz5852nfuk32ogb, .table th.tinytable_css_7qu7evz5852nfuk32ogb { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_wb5z4s69xuo8hopuqsh5, .table th.tinytable_css_wb5z4s69xuo8hopuqsh5 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_chd3zliacvi6uwlhhfs6, .table th.tinytable_css_chd3zliacvi6uwlhhfs6 { text-align: center; }
-      .table td.tinytable_css_oz58fx6sqhg0var00chc, .table th.tinytable_css_oz58fx6sqhg0var00chc { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ikdjh2x5veii129u2g9a, .table th.tinytable_css_ikdjh2x5veii129u2g9a { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_brjqichik8778kn2hmsu, .table th.tinytable_css_brjqichik8778kn2hmsu { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_tqz58seall5x9d937y88, .table th.tinytable_css_tqz58seall5x9d937y88 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_bw6b3f3q0wxb50wppxnn, .table th.tinytable_css_bw6b3f3q0wxb50wppxnn { text-align: left; }
-      .table td.tinytable_css_zhrho26du2h5sj3mvjd6, .table th.tinytable_css_zhrho26du2h5sj3mvjd6 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_f5386emr50qcimqbklt3, .table th.tinytable_css_f5386emr50qcimqbklt3 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_om6hodygrm6yhlg5hyrn, .table th.tinytable_css_om6hodygrm6yhlg5hyrn { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_pq4jwadh4vfre5d4odye, .table th.tinytable_css_pq4jwadh4vfre5d4odye { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6aunt7l8zt55mij8jxd3, .table th.tinytable_css_6aunt7l8zt55mij8jxd3 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_73m18dy58yqit7gxg9wf, .table th.tinytable_css_73m18dy58yqit7gxg9wf { text-align: center; }
+      .table td.tinytable_css_g7ohrhzoj85bmaubgyo3, .table th.tinytable_css_g7ohrhzoj85bmaubgyo3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_pj7d3jcu0lhc7yefkp7d, .table th.tinytable_css_pj7d3jcu0lhc7yefkp7d { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9ii4vfdjii77455q5yzh, .table th.tinytable_css_9ii4vfdjii77455q5yzh { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_gvhyxwre5r79hu2a0udc, .table th.tinytable_css_gvhyxwre5r79hu2a0udc { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_w7qey1i0iag3n8936bsl, .table th.tinytable_css_w7qey1i0iag3n8936bsl { text-align: left; }
+      .table td.tinytable_css_9l0yjbmdvrbsapno2ie1, .table th.tinytable_css_9l0yjbmdvrbsapno2ie1 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_hoau95msp00rd0nlz8ep, .table th.tinytable_css_hoau95msp00rd0nlz8ep { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_xh84sl3u2bwil5ca0dqh" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
+      <table class="table table-borderless" id="tinytable_1d9iaxfxol2id5r2jmgf" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
         <thead>
 <tr>
 <th scope="col" align="center" colspan=1> </th>
