--- a/model-fit-in-binary-response-models.html
+++ b/model-fit-in-binary-response-models.html
@@ -237,8 +237,8 @@ div.csl-indent {
 </ul></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#limitations"><i class="fa fa-check"></i>Limitations</a></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#literature-recommendations"><i class="fa fa-check"></i>Literature Recommendations</a></li>
+<li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#important-disclaimer"><i class="fa fa-check"></i>Important Disclaimer</a></li>
 </ul></li>
-<li class="chapter" data-level="" data-path="important-disclaimer.html"><a href="important-disclaimer.html"><i class="fa fa-check"></i>Important Disclaimer</a></li>
 <li class="chapter" data-level="" data-path="homework-for-week-3.html"><a href="homework-for-week-3.html"><i class="fa fa-check"></i>Homework for Week 3</a></li>
 <li class="chapter" data-level="" data-path="glossary-1.html"><a href="glossary-1.html"><i class="fa fa-check"></i>Glossary</a></li>
 <li class="chapter" data-level="" data-path="flashcards-1.html"><a href="flashcards-1.html"><i class="fa fa-check"></i>Flashcards</a></li>
@@ -1262,8 +1262,8 @@ Figure 28: ROC Curve
 
     <script>
 
-      function styleCell_sm9uh251y1dbal1gnyby(i, j, css_id) {
-          var table = document.getElementById("tinytable_sm9uh251y1dbal1gnyby");
+      function styleCell_63yetyje5nhz037wtkmh(i, j, css_id) {
+          var table = document.getElementById("tinytable_63yetyje5nhz037wtkmh");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1273,7 +1273,7 @@ Figure 28: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_sm9uh251y1dbal1gnyby');
+        var table = document.getElementById('tinytable_63yetyje5nhz037wtkmh');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1281,8 +1281,8 @@ Figure 28: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_sm9uh251y1dbal1gnyby(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_sm9uh251y1dbal1gnyby");
+      function spanCell_63yetyje5nhz037wtkmh(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_63yetyje5nhz037wtkmh");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1312,26 +1312,26 @@ Figure 28: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_gs8c80uz2gm67hey5tcc',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_5c08m5pkbfdzd96msyax',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_q7tfau0b4m9o92ygpomw',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_elhpdu4xebx0fub1xr1y',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_cnfzw7l70bhnae7jiy34',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_8y86nfs5gs2l28irn1bs',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_b7wt92taejs7h700942m',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_tyr3vqzj798ji4l9marz',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_3vqhya19fq55qg4fa555',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_7d52dweph7cn5amkkf0q',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_amridmqq0ipx0girrm53',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_7alu0bq43eurj405izbe',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_ddmv3xbfna0kezyq1238',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_g829d2fn42ubtucig0af',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_ur4g4klxoimndyeocq1i',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_wrxp82w1euivy4tv1hbx',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_kfkz0028elgdcdchrqrk',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_fokp5wra1dqd18zwqlcj',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_i1x6oltx9vzu1zz4r8hi',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_b7vtt7llguolb2y1wo2x',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_cfqi08xm5xmpf58s1j3i',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_a257mo7672gt23w7v2ek',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_jolwlazmnmvntnmsyevi',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_9di8yidbqrjqlynse3l0',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_42uezncd34v9ef3wy0wa',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ldjm1jg3ba6fi76kf6sx',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_fkgo18axy9n53ia6jlcm',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_k0d4clhbkssaknpav1z9',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_sm9uh251y1dbal1gnyby(cell.i, cell.j, group.css_id);
+                  styleCell_63yetyje5nhz037wtkmh(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1339,23 +1339,23 @@ Figure 28: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_gs8c80uz2gm67hey5tcc, .table th.tinytable_css_gs8c80uz2gm67hey5tcc { text-align: center; text-align: center; }
-      .table td.tinytable_css_5c08m5pkbfdzd96msyax, .table th.tinytable_css_5c08m5pkbfdzd96msyax { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_q7tfau0b4m9o92ygpomw, .table th.tinytable_css_q7tfau0b4m9o92ygpomw { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_elhpdu4xebx0fub1xr1y, .table th.tinytable_css_elhpdu4xebx0fub1xr1y { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_cnfzw7l70bhnae7jiy34, .table th.tinytable_css_cnfzw7l70bhnae7jiy34 { text-align: center; }
-      .table td.tinytable_css_8y86nfs5gs2l28irn1bs, .table th.tinytable_css_8y86nfs5gs2l28irn1bs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_b7wt92taejs7h700942m, .table th.tinytable_css_b7wt92taejs7h700942m { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_tyr3vqzj798ji4l9marz, .table th.tinytable_css_tyr3vqzj798ji4l9marz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_3vqhya19fq55qg4fa555, .table th.tinytable_css_3vqhya19fq55qg4fa555 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7d52dweph7cn5amkkf0q, .table th.tinytable_css_7d52dweph7cn5amkkf0q { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_amridmqq0ipx0girrm53, .table th.tinytable_css_amridmqq0ipx0girrm53 { text-align: left; }
-      .table td.tinytable_css_7alu0bq43eurj405izbe, .table th.tinytable_css_7alu0bq43eurj405izbe { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ddmv3xbfna0kezyq1238, .table th.tinytable_css_ddmv3xbfna0kezyq1238 { text-align: left; text-align: center; }
-      .table td.tinytable_css_g829d2fn42ubtucig0af, .table th.tinytable_css_g829d2fn42ubtucig0af { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ur4g4klxoimndyeocq1i, .table th.tinytable_css_ur4g4klxoimndyeocq1i { text-align: center; text-align: center; }
+      .table td.tinytable_css_wrxp82w1euivy4tv1hbx, .table th.tinytable_css_wrxp82w1euivy4tv1hbx { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_kfkz0028elgdcdchrqrk, .table th.tinytable_css_kfkz0028elgdcdchrqrk { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_fokp5wra1dqd18zwqlcj, .table th.tinytable_css_fokp5wra1dqd18zwqlcj { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_i1x6oltx9vzu1zz4r8hi, .table th.tinytable_css_i1x6oltx9vzu1zz4r8hi { text-align: center; }
+      .table td.tinytable_css_b7vtt7llguolb2y1wo2x, .table th.tinytable_css_b7vtt7llguolb2y1wo2x { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_cfqi08xm5xmpf58s1j3i, .table th.tinytable_css_cfqi08xm5xmpf58s1j3i { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_a257mo7672gt23w7v2ek, .table th.tinytable_css_a257mo7672gt23w7v2ek { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_jolwlazmnmvntnmsyevi, .table th.tinytable_css_jolwlazmnmvntnmsyevi { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_9di8yidbqrjqlynse3l0, .table th.tinytable_css_9di8yidbqrjqlynse3l0 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_42uezncd34v9ef3wy0wa, .table th.tinytable_css_42uezncd34v9ef3wy0wa { text-align: left; }
+      .table td.tinytable_css_ldjm1jg3ba6fi76kf6sx, .table th.tinytable_css_ldjm1jg3ba6fi76kf6sx { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_fkgo18axy9n53ia6jlcm, .table th.tinytable_css_fkgo18axy9n53ia6jlcm { text-align: left; text-align: center; }
+      .table td.tinytable_css_k0d4clhbkssaknpav1z9, .table th.tinytable_css_k0d4clhbkssaknpav1z9 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_sm9uh251y1dbal1gnyby" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
+      <table class="table table-borderless" id="tinytable_63yetyje5nhz037wtkmh" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
         <thead>
 <tr>
 <th scope="col" align="center" colspan=1> </th>
